<resources>
    <string name="app_name">Weather App</string>
    <string name="btnSearch">Search</string>
    <string name="cityHint">City</string>
    <string name="todo">Add City</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="description">Description</string>
    <string name="imgWeather">WeatherImage</string>
    <string name="humidity">Humidity</string>
    <string name="add_new_city">Add New City</string>
    <string name="enter_a_city">Enter a city</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="day">Day</string>
</resources>