<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="12dp"
    app:cardBackgroundColor="@color/blue_btn_bg_color"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:layout_marginTop="5dp"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:srcCompat="@android:drawable/ic_input_add"
            android:textColor="@color/black"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txtTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/description"
            android:textColor="@color/black"/>


    </LinearLayout>



</androidx.cardview.widget.CardView>