<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewLocationByCity"
    android:id="@+id/layoutBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">



        <Spinner
            android:id="@+id/spnCity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/spinner_border"
            />



        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/imgWeather"
            android:backgroundTint="@color/blue_btn_bg_color"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/lblDescription"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/description"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/lblTemperature"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/temperature"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/lblPressure"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/pressure"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/lblHumidity"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/humidity"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/lblWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/wind_speed"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="10dp"

            >


            <Button
                android:id="@+id/btnAddCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/main_blue_color"
                android:text="@string/add_new_city"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/btnAdd"
                app:layout_constraintEnd_toEndOf="@+id/btnAdd"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="17dp"
                android:backgroundTint="@color/main_blue_color"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_input_add"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weatherForcast"
                android:layout_width="230dp"
                android:layout_height="220dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnAddCity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</RelativeLayout>